--- a/WEB/TicketGol/Login/css/Login.css
+++ b/WEB/TicketGol/Login/css/Login.css
@@ -1,5 +1,7 @@
+/* Importação de fontes */
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@100;300;400;500;700;900&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
 
+/* Estilos globais */
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +9,7 @@
   font-family: 'poppins', sans-serif;
 }
 
+/* Estilos do corpo */
 body {
   width: 100vw;
   height: 100vh;
@@ -15,9 +18,10 @@ body {
   justify-content: center;
   position: relative;
   background-color: whitesmoke;
- }
+}
 
- .container {
+/* Contêiner principal */
+.container {
   background-color: whitesmoke;
   padding: 6px;
   width: 450px;
@@ -27,9 +31,10 @@ body {
   align-items: center;
   position: relative;
   overflow: hidden;
-  box-shadow: 0px 0px 10px 0px red;
- }
+  box-shadow: 0 0 10px #B5121B;
+}
 
+/* Estilos do formulário */
 form {
   position: absolute;
   margin-top: 220px;
@@ -37,9 +42,9 @@ form {
   width: 300px;
   height: 400px;
   margin-left: 50px;
-  
 }
 
+/* Botões do formulário */
 .buttonsForm {
   margin-top: 30px;
   position: relative;
@@ -64,6 +69,7 @@ form {
   transition: .3s;
 }
 
+/* Entrada de texto */
 input[type="text"], input[type="password"] {
   border: none;
   margin-top: 30px;
@@ -73,6 +79,7 @@ input[type="text"], input[type="password"] {
   width: 100%;
 }
 
+/* Botão de envio */
 button[type="submit"] {
   background: #B5121B;
   color: white;
@@ -86,12 +93,14 @@ button[type="submit"] {
   cursor: pointer;
 }
 
+/* Caixa de seleção e rótulo */
 .divCheck {
   margin: 10px 0 0 5px;
   width: 80%;
   font-size: 13px;
 }
 
+/* Posicionamento dos formulários */
 #signin {
   left: 1000px;
 }
@@ -100,6 +109,7 @@ button[type="submit"] {
   left: 450px;
 }
 
+/* Ícones */
 i {
   position: absolute;
   left: 0;
@@ -122,14 +132,16 @@ i {
   top: 224px;
 }      
 
-.logo{
-    width: 100px;
-    height: 100px;
-    margin-top: 25px;
+/* Estilos do logotipo */
+.logo {
+  width: 100px;
+  height: 100px;
+  margin-top: 25px;
 }
-.imagem{
-    width: 800px;
-    height: 600px;
-    box-shadow: 0px 0px 10px 0px red;
-   
+
+/* Estilos da imagem */
+.imagem {
+  width: 800px;
+  height: 600px;
+  box-shadow: 0px 0px 10px 0px red;
 }
