--- a/ticketGol/src/main/webapp/Login/css/Login.css
+++ b/ticketGol/src/main/webapp/Login/css/Login.css
@@ -1,156 +1,171 @@
-/* Importação de fontes */
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@100;300;400;500;700;900&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
 
-/* Estilos globais */
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
 }
 
-/* Estilos do corpo */
 body {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  background-color: whitesmoke;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: url(/teste/img/img-fundoTeste6.jpeg) no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
-/* Contêiner principal */
+
 .container {
-  background-color: whitesmoke;
-  padding: 6px;
-  width: 450px;
-  height: 600px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 0 0 10px #B5121B;
+    background: transparent;
+    padding: 6px;
+    width: 360px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 0 20px #B5121B;
+    backdrop-filter: blur(3px) grayscale(0.2) brightness(0.7);
+    ;
 }
 
-/* Estilos do formulário */
 form {
-  position: absolute;
-  margin-top: 180px;
-  transition: .5s;
-  width: 300px;
-  height: 400px;
-  margin-left: 50px;
+    position: absolute;
+    margin-top: 80px;
+    transition: .5s;
+    width: 300px;
+    height: 400px;
+    color: white;
 }
 
-/* Botões do formulário */
 .buttonsForm {
-  margin-top: 15px;
-  position: relative;
-  border-radius: 30px;
-  box-shadow: 0 0 7px 0 #B5121B;
+    margin-top: 40px;
+    position: relative;
+    border-radius: 30px;
+    box-shadow: 0 0 7px 0 #B5121B;
 }
 
 .buttonsForm button {
-  cursor: pointer;
-  background: transparent;
-  border: none;
-  position: relative;
-  padding: 10px 29px;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    position: relative;
+    padding: 10px 21px;
 }
 
 .btnColor {
-  position: absolute;
-  width: 108px;
-  height: 100%;
-  background: linear-gradient(to right, #fd8585, #B5121B);
-  border-radius: 30px;
-  transition: .3s;
+    position: absolute;
+    width: 112px;
+    height: 100%;
+    background: linear-gradient(to right, #b5121a, #b5121ab0);
+    border-radius: 30px;
+    transition: .3s;
 }
 
-/* Entrada de texto */
-input[type="text"], input[type="password"] {
-  border: none;
-  margin-top: 30px;
-  border-radius: 60px;
-  padding: 8px 0 8px 35px;
-  outline: none;
-  width: 100%;
+.btnLogin {
+    color: white;
+    font-size: 15px;
+    margin-left: 7px;
 }
 
-/* Botão de envio */
+.btnCadastro {
+    color: white;
+    font-size: 15px;
+    margin-left: 10px;
+}
+
+input[type="text"],
+input[type="password"] {
+    border: none;
+    margin-top: 20px;
+    border-radius: 60px;
+    padding: 8px 0 8px 35px;
+    outline: none;
+    width: 100%;
+    background: transparent;
+    box-shadow: 0 0 20px 0 #B5121B;
+    color: white;
+}
+
 button[type="submit"] {
-  background: #B5121B;
-  color: white;
-  border-radius: 30px;
-  width: 100%;
-  border: none;
-  outline: none;
-  padding: 8px 0 8px 15px;
-  font-size: 15px;
-  margin-top: 10px;
-  cursor: pointer;
+    background: #B5121B;
+    color: white;
+    border-radius: 30px;
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 8px 0 8px 15px;
+    font-size: 17px;
+    cursor: pointer;
 }
 
-/* Caixa de seleção e rótulo */
+.btn-login {
+    margin-top: 105px;
+}
+
+.btn-cadastro {
+    margin-top: 15px;
+}
+
 .divCheck {
-  margin: 10px 0 0 5px;
-  width: 80%;
-  font-size: 13px;
+    margin: 10px 0 0 5px;
+    width: 80%;
+    font-size: 13px;
 }
 
-/* Posicionamento dos formulários */
 #signin {
-  left: 450px;
+    left: 25px;
+    margin-top: 45%;
 }
 
 #signup {
-  left: 450px;
+    left: 450px;
+    margin-top: 105px;
 }
 
-/* Ícones */
 i {
-  position: absolute;
-  left: 0;
-  padding: 10px 10px;
+    position: absolute;
+    left: 0;
+    padding: 10px 10px;
+}
+
+.iEmailLogin {
+    top: 4.5%;
+    font-size: 17px;
+}
+
+.iLockLogin {
+    top: 18.5%;
+    font-size: 17px;
+}
+
+.iUser {
+    top: 4.5%;
+    font-size: 17px;
 }
 
 .iEmail {
-  top: 30px;
+    top: 18.5%;
+    font-size: 17px;
 }
 
-.iPassword {
-  top: 95px;
+.iPhone {
+    top: 32.5%;
+    font-size: 17px;
 }
-
-.iPassword2 {
-  top: 160px;
-} 
-
-.iPassword3 {
-  top: 30px;
-}  
-
-.iPassword4 {
-  top: 293px;
-}   
 
 .iCalendar {
-  top: 224px;
-} 
-          
-
-/* Estilos do logotipo */
-.logo {
-  width: 100px;
-  height: 100px;
-  margin-top: 10px;
+    top: 46.3%;
+    font-size: 17px;
 }
 
-/* Estilos da imagem */
-.imagem {
-  width: 800px;
-  height: 600px;
-  box-shadow: 0px 0px 10px 0px red;
+.iLock {
+    top: 60.4%;
+    font-size: 17px;
 }
