--- a/ticketGol/src/main/webapp/Home/css/Home.css
+++ b/ticketGol/src/main/webapp/Home/css/Home.css
@@ -309,11 +309,13 @@ footer {
 }
 
 .footer-distributed .footer-center i {
-  background-color: #33383b;
+  background-color: transparent;
   color: #ffffff;
   font-size: 25px;
   width: 38px;
   height: 38px;
+  border: none;
+  outline: 2px solid white;
   border-radius: 50%;
   text-align: center;
   line-height: 42px;
@@ -322,13 +324,32 @@ footer {
 }
 
 .footer-distributed .footer-center i:hover {
-  box-shadow: 0 0 10px white;
-  transition: 0.3s;
+  transition: all 0.3s; /* Adiciona uma transição suave */
 }
 
 .footer-distributed .footer-center i.fa-envelope {
   font-size: 17px;
   line-height: 38px;
+}
+
+.footer-distributed .footer-center i.fa-map-marker {
+  line-height: 38px;
+}
+
+
+.footer-distributed .footer-center i.fa-map-marker:hover {
+  transform: scale(1.05); /* Aplica uma escala de aumento no hover */
+  transition: all 0.3s;
+}
+
+.footer-distributed .footer-center i.fa-phone:hover {
+  transform: scale(1.05); /* Aplica uma escala de aumento no hover */
+  transition: all 0.3s; 
+}
+
+.footer-distributed .footer-center i.fa-envelope:hover {
+  transform: scale(1.05); /* Aplica uma escala de aumento no hover */
+  transition: all 0.3s;
 }
 
 .footer-distributed .footer-center p {
@@ -372,63 +393,59 @@ footer {
 }
 
 :root {
-  --background: #060D23;
-  --facebook: #0A66C2;
-  --x: #000;
-  --white: #FFF
+  --background: #060D23; /* Define uma variável CSS para a cor de fundo */
+  --facebook: #0A66C2; /* Define uma variável CSS para a cor do Facebook */
+  --x: #000; /* Define uma variável CSS para a cor preta */
+  --white: #FFF /* Define uma variável CSS para a cor branca */
 }
 
 .btns-midias-sociais {
-  margin-top: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
+  margin-top: 20px; /* Adiciona uma margem superior */
+  display: flex; /* Usa um layout flexível para os botões de mídia social */
+  flex-wrap: wrap; /* Permite a quebra de linha */
+  gap: 1rem; /* Define o espaço entre os botões */
 }
 
 .btn-midia-social {
-  width: 3rem;
-  height: 3rem;
-  border: none;
-  background-color: transparent;
-  border-radius: 50%;
-  outline: 2px solid white;
-  cursor: pointer;
-  transition: all 0.3s;
-  display: grid;
-  place-items: center;
+  width: 3rem; /* Define a largura */
+  height: 3rem; /* Define a altura */
+  border: none; /* Remove a borda */
+  background-color: transparent; /* Define o plano de fundo como transparente */
+  border-radius: 50%; /* Adiciona bordas arredondadas */
+  outline: 2px solid white; /* Adiciona um contorno branco */
+  cursor: pointer; /* Define o cursor como ponteiro */
+  transition: all 0.3s; /* Adiciona uma transição suave */
+  display: grid; /* Usa um layout de grade */
+  place-items: center; /* Alinha os itens no centro */
 }
 
 .btn-midia-social:hover {
-  outline-offset: 3px;
-  transition: all 0.3s;
+  outline-offset: 3px; /* Define o deslocamento do contorno */
+  transition: all 0.3s; /* Adiciona uma transição suave */
 }
 
 img {
-  width: 15px;
+  width: 15px; /* Define a largura da imagem */
 }
 
 .btn-midia-social img {
-  transition: all 0.2s;
+  transition: all 0.2s; /* Adiciona uma transição suave */
 }
 
 .btn-midia-social:hover img {
-  transform: scale(1.15);
+  transform: scale(1.15); /* Aplica uma escala de aumento no hover */
 }
 
 .btn-midia-social:hover:nth-child(1) {
-  background-color: var(--facebook);
+  background-color: var(--x); /* Define a cor de fundo */
 }
 
 .btn-midia-social:hover:nth-child(2) {
-  background: radial-gradient(
-    circle at 30% 107%, #FDF497 0%,
-    #FDF497 5%, #FD5949 45%,
-    #D6249F 60%, #285AEB 90%
-  );
+  background-color: var(--x); /* Define a cor de fundo */
 }
 
 .btn-midia-social:hover:nth-child(3) {
-  background-color: var(--x);
+  background-color: var(--x); /* Define a cor de fundo */
 }
 
 /* Estilos responsivos para tamanhos menores de tela */
